# veritas

./: .gitignore  ACCURACY.md  AGENTS.md  CNAME  DATASET.md  HANDOFF.md  README.md  SUBMISSION.md  _config.yml  adversa.sh  architecture.md  export_to_splunk.py  find_evil.py  index.md  pyproject.toml  the-game.md  veritas-merge-iocs.sh  veritas.sh
.claude/: settings.json
analysis/: evasion_sample.md  evasion_sample.py  pool_separation_demo.md  validate_against_elastic.py  validate_against_evtx.py
custom-agent/: auditor_agent.py  blue_agent.py  brain.py  build_corpus.py  compute_weights.py  contracts.py  cross_verifier.py  disk_agent.py  export_patterns.py  extract_iocs.py  forensic_brain.py  forensic_data_agent.py  forensic_red_agent.py  html_report.py  investigate.py  memory_agent.py  metrics.py  sift_server.py  verifier.py
docs/: adversa-guardrails.tex  adversa.bib  adversa_paper.tex  domain_gap_results.md  gen_guardrails.py  nfury-investigation.md  nfury-report.html  nromanoff-investigation.md  nromanoff-report.html  project_story.md  project_story.tex  rocba-investigation.md  rocba-report.html  tdungan-investigation.md  tdungan-report.html
evals/: eval_metrics.py  eval_output.py  eval_trajectory.py  run_evals.sh  verify_submission.py
fast-triage/: fast_triage.py
reports/: adversa-architecture.tex  example-execution-log.json  false-positives.md  forensic_accuracy_report.json  nfury-investigation-rerun.json  operational_rules.json
skills/: T1003.002-sam-dump.md  T1055-process-injection.md  T1071.001-c2-web.md  T1078-valid-accounts.md  T1134-access-token.md  (+5 more)
(+11 files in other folders)
