[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adversa-cli"
version = "1.0.0"
description = "ADVERSA: Autonomous Windows Forensic Investigation — Adversarial Signal Learning"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "sassom2112"},
]
keywords = ["forensics", "incident-response", "dfir", "adversarial", "mcp", "sift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.104.1",
    "mcp>=1.0",
]

[project.scripts]
adversa = "adversa.cli:main"

[project.urls]
Homepage = "https://github.com/sassom2112/adversa"
Repository = "https://github.com/sassom2112/adversa"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=4.0",
    "ruff>=0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adversa"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.coverage.run]
source = ["src/adversa"]
branch = true
